--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="back">BACK</string>
     <string name="welcome">Welcome</string>
     <string name="start">START</string>
-    <string name="touch_handling">Touch event handling (input latency): </string>
-    <string name="display_latency">Rendering delay (output latency) </string>
-    <string name="reaction_time">Reaction Time: </string>
-
+    <string name="touch_handling">Touch event handling (input latency):</string>
+    <string name="display_latency">Rendering delay (output latency)</string>
+    <string name="reaction_time">Reaction Time:</string>
+    <string name="DND">Enable DND</string>
 </resources>
